kube/observation/grafana/network.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: obs
  labels:
    app.kubernetes.io/name: grafana
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  ingressClassName: nginx-internal
  tls:
  - hosts:
    - grafana.matthew-stratton.me
    secretName: grafana-tls
  rules:
  - host: grafana.matthew-stratton.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 80
